# kalman-mouse

./: .gitignore  README.md  make_vc10.bat
src/: CMakeLists.txt  main.cpp
